# crs

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
.github/workflows/: crs-actions.yml
docs/: local-dev.md
src/: db.rs  helpers.rs  lib.rs  main.rs  model.rs
src/domain/: accreditation.rs  assessment.rs  base.rs  certificate.rs  certificate_metadata.rs  error.rs  mod.rs  organization.rs  person.rs  validity.rs
src/dto/: certificate_dto.rs  certificate_metadata_dto.rs  mod.rs  recipient_dto.rs
src/handlers/: get_certificate.rs  mod.rs  store_certificate.rs
