[package]
name = "crs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
bson = { version = "2.13.0", features = ["uuid-1", "chrono-0_4"] }
chrono = { version = "0.4.34", features = ["serde"] }
dotenvy = "0.15.7"
env_logger = "0.11.2"
futures = "0.3.30"
log = "0.4.20"
mongodb = {version = "3.2.5", features = ["tracing-unstable"]}
regex = "1.10.4"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
uuid = { version = "1.7.0", features = ["v8", "fast-rng", "macro-diagnostics", "serde"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
